--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,14 @@
 ms-swift==3.10.2
-transformers>=4.57.3
+transformers==4.57.1
 qwen_vl_utils>=0.0.14
 trl[vllm]
 math_verify
 wandb
+weave
 packaging
 ninja
 deepspeed
-vllm==0.10.2
+vllm==0.11.0
 msgspec
 torchvision
 decord
